2004-10-10  Mark Kettenis  <kettenis@gnu.org>

	* ada-lang.c (lim_warning): Re-implement as a varargs function.
	(decode_packed_array_type, value_subscript_packed)
	(ada_evaluate_subexp, to_fixed_range_type): Remove redundant
	argument in call to lim_warning.

	* configure.in: Really disable the TUI if an enhanced curses
	library isn't found.
	* configure: Regenerate.

2004-10-09  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/nbsdaout.mh (NAT_FILE): Set to solib.h.
	* config/i386/nbsdelf.mh (NAT_FILE): Set to solib.h.
	* config/i386/nm-nbsdaout.h: Remove file.
	* config/i386/nm-fbsd.h (link_object, lo_name, lo_library)
	(lo_unused, lo_major, lo_minor, lo_next, link_map, lm_addr)
	(lm_name, lm_next, lm_lop, lm_lob, lm_rwt, lm_ld, lm_lpd)
	(link_dynamic_2, ld_loaded, ld_need, ld_rules, ld_got, ld_plt)
	(ld_rel, ld_hash, ld_stab, ld_stab_hash, ld_buckets, ld_symbols)
	(ld_symb_size, ld_text, ld_plt_sz, rtc_symb, rtc_sp, rtc_next)
	(ld_debug, ldd_version, ldd_in_debugger, ldd_sym_loaded)
	(ldd_bp_addr, ldd_bp_inst, ldd_cp, link_dynamic, ld_version)
	(ldd, ld_un, ld_2): Remove defines.
	* config/i386/nm-obsd.h: Likewise.

2004-10-09  Paul Hilfinger  <hilfingr@nile.gnat.com>

	* ada-lex.l: Remove useless rule whose right-context clause
	causes unreferenced static function warning for yyrealloc.
	(ada_flex_use): Remove the artificial reference to yyrealloc.

2004-10-08  Andrew Cagney  <cagney@gnu.org>

	* target.h (struct target_ops): Rename to_xfer_memory to
	deprecated_xfer_memory.
	* target.c: Update.
	(deprecated_debug_xfer_memory): Rename debug_to_xfer_memory.
	* wince.c: Update.
	* win32-nat.c: Update.
	* v850ice.c: Update.
	* uw-thread.c: Update.
	* thread-db.c: Update.
	* sol-thread.c: Update.
	* remote.c: Update.
	* remote-vx.c: Update.
	* remote-st.c: Update.
	* remote-sim.c: Update.
	* remote-sds.c: Update.
	* remote-rdp.c: Update.
	* remote-rdi.c: Update.
	* remote-mips.c: Update.
	* remote-m32r-sdi.c: Update.
	* remote-e7000.c: Update.