@@ -250,36 +250,6 @@ sparc32_linux_sigtramp_frame_sniffer (struct frame_info *next_frame)
 }
 
 
-static struct link_map_offsets *
-sparc32_linux_svr4_fetch_link_map_offsets (void)
-{
-  static struct link_map_offsets lmo;
-  static struct link_map_offsets *lmp = NULL;
-
-  if (lmp == NULL)
-    {
-      lmp = &lmo;
-
-      /* Everything we need is in the first 8 bytes.  */
-      lmo.r_debug_size = 8;
-      lmo.r_map_offset = 4;
-      lmo.r_map_size   = 4;
-
-      /* Everything we need is in the first 20 bytes.  */
-      lmo.link_map_size = 20;
-      lmo.l_addr_offset = 0;
-      lmo.l_addr_size   = 4;
-      lmo.l_name_offset = 4;
-      lmo.l_name_size   = 4;
-      lmo.l_next_offset = 12;
-      lmo.l_next_size   = 4;
-      lmo.l_prev_offset = 16;
-      lmo.l_prev_size   = 4;
-    }
-
-  return lmp;
-}
-
 static void
 sparc32_linux_init_abi (struct gdbarch_info info, struct gdbarch *gdbarch)
 {
@@ -294,9 +264,6 @@ sparc32_linux_init_abi (struct gdbarch_info info, struct gdbarch *gdbarch)
   set_gdbarch_long_double_format (gdbarch, &floatformat_ieee_double_big);
 
   frame_unwind_append_sniffer (gdbarch, sparc32_linux_sigtramp_frame_sniffer);
-
-  set_solib_svr4_fetch_link_map_offsets
-    (gdbarch, sparc32_linux_svr4_fetch_link_map_offsets);
 }
 
 /* Provide a prototype to silence -Wmissing-prototypes.  */
