@@ -1,5 +1,9 @@
 2004-10-10  Mark Kettenis  <kettenis@gnu.org>
 
+	* sparc-linux-tdep.c (sparc32_linux_svr4_fetch_link_map_offsets):
+	Remove function.
+	(sparc32_linux_init_abi): Don't set solib_svr4_link_map_offsets.
+
 	* ada-lang.c (lim_warning): Re-implement as a varargs function.
 	(decode_packed_array_type, value_subscript_packed)
 	(ada_evaluate_subexp, to_fixed_range_type): Remove redundant
